--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,55 @@
-numpy
-opencv-python
-Pillow
-torch>=1.7
-torchvision>=0.8.0
-tqdm
+absl-py==1.0.0
+autopep8==1.6.0
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+click==8.1.0
+colorama==0.4.4
+distlib==0.3.4
+filelock==3.7.1
+Flask==2.1.2
+gunicorn==20.1.0
+huggingface-hub==0.7.0
+idna==3.3
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.1.0
+libclang==14.0.1
+MarkupSafe==2.1.1
+nltk==3.7
+numpy==1.21.5
+packaging==21.3
+Pillow==9.1.1
+platformdirs==2.5.2
+pycodestyle==2.8.0
+pyparsing==3.0.9
+PyQt5==5.15.4
+pyqt5-plugins==5.15.4.2.2
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.1
+pyqt5-tools==5.15.4.3.2
+PyQt5Designer==5.14.1
+python-dotenv==0.20.0
+PyYAML==6.0
+qt5-applications==5.15.2.2.2
+qt5-tools==5.15.2.1.2
+regex==2022.6.2
+requests==2.27.1
+scikit-learn==1.0.2
+scipy==1.7.3
+sentence-transformers==2.2.0
+sentencepiece==0.1.96
+six==1.16.0
+tensorflow-estimator==2.9.0
+threadpoolctl==3.1.0
+tokenizers==0.12.1
+toml==0.10.2
+torch==1.11.0
+torchvision==0.12.0
+tqdm==4.64.0
+transformers==4.19.2
+typing-extensions==4.1.1
+urllib3==1.26.9
+virtualenv==20.15.1
+Werkzeug==2.1.2
+zipp==3.7.0
