--- a/requirements.txt
+++ b/requirements.txt
@@ -23,16 +23,8 @@ Pillow==9.1.1
 platformdirs==2.5.2
 pycodestyle==2.8.0
 pyparsing==3.0.9
-PyQt5==5.15.4
-pyqt5-plugins==5.15.4.2.2
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.1
-pyqt5-tools==5.15.4.3.2
-PyQt5Designer==5.14.1
 python-dotenv==0.20.0
 PyYAML==6.0
-qt5-applications==5.15.2.2.2
-qt5-tools==5.15.2.1.2
 regex==2022.6.2
 requests==2.27.1
 scikit-learn==1.0.2
@@ -44,8 +36,8 @@ tensorflow-estimator==2.9.0
 threadpoolctl==3.1.0
 tokenizers==0.12.1
 toml==0.10.2
-torch==1.11.0
-torchvision==0.12.0
+torch==1.11.0+cpu
+torchvision==0.12.0+cpu
 tqdm==4.64.0
 transformers==4.19.2
 typing-extensions==4.1.1
