--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,10 @@ tensorflow-estimator==2.9.0
 threadpoolctl==3.1.0
 tokenizers==0.12.1
 toml==0.10.2
-http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linux_x86_64.whl
+-f https://download.pytorch.org/whl/torch_stable.html 
+torch==1.4.0+cpu 
+-f https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.5.0+cpu
 tqdm==4.64.0
 transformers==4.19.2
 typing-extensions==4.1.1
