--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ nltk==3.7
 numpy==1.21.5
 Pillow==9.1.1
 requests==2.27.1
-torch==1.3.1+cpu
+torch==1.3.1
 typing-extensions==4.1.1
 urllib3==1.26.9
 Werkzeug==2.1.2
