--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-
+streamlit
+freeglut3-dev
+libgtk2.0-dev
+libgl1-mesa-glx
 Flask==2.1.2
 gunicorn==20.1.0
 Jinja2==3.1.2
@@ -13,4 +16,4 @@ torch==1.3.1
 typing-extensions==4.1.1
 urllib3==1.26.9
 Werkzeug==2.1.2
-opencv-python==4.6.0.66
+opencv-python-headless
