--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 streamlit
-Flask==2.1.2
-gunicorn==20.1.0
-Jinja2==3.1.2
-joblib==1.1.0
-libclang==14.0.1
-MarkupSafe==2.1.1
-nltk==3.7
-numpy==1.21.5
-Pillow==9.1.1
-requests==2.27.1
-torch==1.3.1
-typing-extensions==4.1.1
-urllib3==1.26.9
-Werkzeug==2.1.2
+Flask
+gunicorn
+Jinja2
+joblib
+libclang
+MarkupSafe
+nltk
+numpy
+Pillow
+requests
+torch
+typing-extensions
+urllib3
+Werkzeug
 opencv-python-headless
 imageio
